# agno-starter-kit

./: .env  .gitignore  README.md  local_embed_url_agent_ui.py  main.py  multi_agents_with_ui.py  pyproject.toml  requirements.txt  simple_agents_ui.py
MCP/: http_client.py  http_server.py  protocol.py  stdio_client.py  stdio_server.py
RAG/: localpdfKnowledgeRetrievalApp.py  pdfurlKnowledgeRetrievalApp.py  urlKnowledgeRetrievalApp.py
Simple Agents/: 1-simle_agent_app.py  2-stock_market_app.py
multimodal/: audio_to_text.py  image_generation.py  image_to_text.py  video_to_text.py
